Change title, remove github link in posts

--- a/_data/variables.yml
+++ b/_data/variables.yml
@@ -1,6 +1,6 @@
 default:
   text_skin: default
-  highlight_theme: tomorrow-night-eighties
+  highlight_theme: tomorrow
   lang: en
   paths:
     root: /
